Fix notifying branch in build failures

--- a/.github/workflows/daily-build-2201.6.x.yml
+++ b/.github/workflows/daily-build-2201.6.x.yml
@@ -207,7 +207,7 @@ jobs:
             \"event_type\": \"notify-build-failure\",
             \"client_payload\": {
               \"repoName\": \"ballerina-distribution\",
-              \"branch\": \"master\"
+              \"branch\": \"2201.6.x\"
             }
           }"
     outputs:
