--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ dependencyJREVersion=jdk-11.0.18+10-jre
 
 specVersion=2022R4
 slf4jVersion=1.7.30
-balstdlibBranch=master
+balstdlibBranch=2201.5.x
 
 # Stdlib Level 01
 stdlibConstraintVersion=1.1.0
