--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ ballerinaLangVersion=2201.3.4
 ballerinaJreVersion=1.0.0
 specVersion=2022R4
 slf4jVersion=1.7.30
-balstdlibBranch=master
+balstdlibBranch=2201.3.x
 
 # Stdlib Level 01
 stdlibConstraintVersion=1.0.2
