Fix building MacOS ARM installer in 2201.6.x

--- a/.github/workflows/daily-build-2201.6.x.yml
+++ b/.github/workflows/daily-build-2201.6.x.yml
@@ -86,6 +86,11 @@ jobs:
         with:
           name: MacOS Installer ZIP
           path: ballerina/build/distributions/ballerina-*-macos.zip
+      - name: Archive MacOS-ARM Installer ZIP
+        uses: actions/upload-artifact@v2
+        with:
+          name: MacOS-ARM Installer ZIP
+          path: ballerina/build/distributions/ballerina-*-macos-arm.zip
       - name: Archive Windows Installer ZIP
         uses: actions/upload-artifact@v2
         with:
