--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ protocToolVersion=0.1.1-20230517-114400-1af2c22
 openapiVersion=1.6.0-20230426-115700-1eb8448
 
 # AsyncAPI Module
-asyncapiVersion=0.5.0
+asyncapiVersion=0.6.0-20230529-102700-4aaeb08
 
 c2cVersion=2.7.0-20230526-194000-7fe2b91
 
