Add math.vector package

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
 stdlibXmldataVersion=2.4.3
 observeVersion=1.0.7
+stdlibMathVectorVersion=1.0.1-20230529-131300-5c49593
 
 # Stdlib Level 02
 stdlibCryptoVersion=2.3.0
