Include edi module

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,6 +47,7 @@ stdlibJwtVersion=2.8.0-20230523-142400-24ef641
 stdlibOAuth2Version=2.8.0-20230523-120200-d1e3253
 stdlibYamlVersion=0.3.0-20230526-194800-8d130f3
 stdlibTomlVersion=0.3.0-20230524-150000-01f6e8f
+stdlibEdiVersion=1.0.0-20230531-144800-0d95e85
 
 # Stdlib Level 05
 stdlibHttpVersion=2.8.0-20230523-165700-8e0a30b
