--- a/.github/workflows/daily-build-2201.3.x.yml
+++ b/.github/workflows/daily-build-2201.3.x.yml
@@ -214,29 +214,29 @@ jobs:
       project-version: ${{ steps.project-version.outputs.version }}
       lang-version: ${{ steps.project-version.outputs.langversion }}
 
-  project-api-tests:
-
-    runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          ref: 2201.3.x
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: Build with Gradle
-        env:
-          packageUser: ${{ github.actor }}
-          packagePAT: ${{ secrets.GITHUB_TOKEN }}
-          devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
-          ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
-          TEST_MODE_ACTIVE: true
-        run: ./gradlew :project-api-tests:test --stacktrace --scan --console=plain --no-daemon --continue
+#  project-api-tests:
+#
+#    runs-on: ubuntu-latest
+#    if: github.repository_owner == 'ballerina-platform'
+#
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v2
+#        with:
+#          ref: 2201.3.x
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'temurin'
+#          java-version: '11'
+#      - name: Build with Gradle
+#        env:
+#          packageUser: ${{ github.actor }}
+#          packagePAT: ${{ secrets.GITHUB_TOKEN }}
+#          devCentralToken: ${{ secrets.BALLERINA_DEV_CENTRAL_ACCESS_TOKEN }}
+#          ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
+#          TEST_MODE_ACTIVE: true
+#        run: ./gradlew :project-api-tests:test --stacktrace --scan --console=plain --no-daemon --continue
 
   windows-build:
 
