Include edi module

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,6 +45,7 @@ stdlibAuthVersion=2.7.1-20230426-151300-6b9f314
 stdlibEmailVersion=2.7.0
 stdlibJwtVersion=2.7.1-20230427-123000-f1f10bf
 stdlibOAuth2Version=2.7.1-20230426-163900-b9c951b
+stdlibEdiVersion=1.0.0-20230531-144800-0d95e85
 
 # Stdlib Level 05
 stdlibHttpVersion=2.7.1-20230504-113400-c4f8055
