--- a/gradle.properties
+++ b/gradle.properties
@@ -77,7 +77,7 @@ ballerinaCommandVersion=1.3.15
 graphqlVersion=0.6.0-20230527-081800-2ac3966
 
 # Protoc Tool
-protocToolVersion=0.1.1-20230517-114400-1af2c22
+protocToolVersion=0.1.1
 
 # OpenAPI Module
 openapiVersion=1.6.0-20230531-154000-763f42b
