Modify math.vector version

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
 stdlibXmldataVersion=2.5.0-20230522-105800-87dea28
 observeVersion=1.0.7
-stdlibMathVectorVersion=1.0.1-20230529-131300-5c49593
+stdlibMathVectorVersion=1.0.1
 
 # Stdlib Level 02
 stdlibCryptoVersion=2.3.1-20230522-113000-73ae1e2
