--- a/gradle.properties
+++ b/gradle.properties
@@ -73,7 +73,7 @@ devToolsVersion=1.1.0-20230529-170100-fc407bd
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
-graphqlVersion=0.6.0-20230527-081800-2ac3966
+graphqlVersion=0.6.0
 
 # Protoc Tool
 protocToolVersion=0.1.1-20230517-114400-1af2c22
