Update OpenAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -79,7 +79,7 @@ graphqlVersion=0.5.0-20230518-121300-d22805d
 protocToolVersion=0.1.1-20230517-114400-1af2c22
 
 # OpenAPI Module
-openapiVersion=1.6.0-20230531-154000-763f42b
+openapiVersion=1.6.0
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
