--- a/gradle.properties
+++ b/gradle.properties
@@ -70,7 +70,7 @@ stdlibPersistVersion=1.0.0-20230529-125900-cf8337e
 persistToolVersion=1.0.0-20230529-142100-07201b3
 
 # Dev Tools
-devToolsVersion=1.1.0-20230529-170100-fc407bd
+devToolsVersion=1.1.0
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
