Change all dependency versions to stable versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.6.0-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.6.0-20230525-070000-e36fc7ac
+ballerinaLangVersion=2201.6.0
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2022R4
@@ -11,63 +11,63 @@ slf4jVersion=1.7.30
 balstdlibBranch=master
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.2.0-20230518-182800-2681a7b
+stdlibConstraintVersion=1.2.0
 stdlibIoVersion=1.4.1
 stdlibJavaArraysVersion=1.2.3
 stdlibRegexVersion=1.4.3
 stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
-stdlibXmldataVersion=2.5.0-20230522-105800-87dea28
+stdlibXmldataVersion=2.5.0
 observeVersion=1.0.7
 stdlibMathVectorVersion=1.0.1
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.3.1-20230522-113000-73ae1e2
-stdlibLogVersion=2.7.1-20230522-155500-d73bdb5
+stdlibCryptoVersion=2.3.1
+stdlibLogVersion=2.7.1
 stdlibOsVersion=1.6.0
-stdlibProtobufVersion=1.4.0-20230522-164900-422b8bf
+stdlibProtobufVersion=1.4.0
 stdlibRandomVersion=1.3.1
 stdlibTaskVersion=2.3.2
 stdlibXsltVersion=2.4.0
 observeInternalVersion=1.0.6
 
 # Stdlib Level 03
-stdlibCacheVersion=3.5.0-20230523-104800-1103165
-stdlibFileVersion=1.7.1-20230523-104800-e56ed72
-stdlibFtpVersion=2.7.1-20230525-100500-c1f4e6c
-stdlibMimeVersion=2.7.1-20230523-092600-8dee40d
-stdlibTcpVersion=1.7.1-20230522-171400-0711070
-stdlibUdpVersion=1.7.1-20230522-165100-ee07010
-stdlibUuidVersion=1.5.1-20230523-104800-89d91a7
+stdlibCacheVersion=3.5.0
+stdlibFileVersion=1.7.1
+stdlibFtpVersion=2.7.1
+stdlibMimeVersion=2.7.1
+stdlibTcpVersion=1.7.1
+stdlibUdpVersion=1.7.1
+stdlibUuidVersion=1.5.1
 
 # Stdlib Level 04
-stdlibAuthVersion=2.8.0-20230523-114200-ee19e22
-stdlibEmailVersion=2.7.1-20230523-143200-e9f728f
-stdlibJwtVersion=2.8.0-20230523-142400-24ef641
-stdlibOAuth2Version=2.8.0-20230523-120200-d1e3253
-stdlibYamlVersion=0.3.0-20230526-194800-8d130f3
-stdlibTomlVersion=0.3.0-20230524-150000-01f6e8f
+stdlibAuthVersion=2.8.0
+stdlibEmailVersion=2.7.1
+stdlibJwtVersion=2.8.0
+stdlibOAuth2Version=2.8.0
+stdlibYamlVersion=0.3.0
+stdlibTomlVersion=0.3.0
 stdlibEdiVersion=1.0.1
 
 # Stdlib Level 05
-stdlibHttpVersion=2.8.0-20230523-165700-8e0a30b
+stdlibHttpVersion=2.8.0
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.8.0-20230524-090600-a739bbf
-stdlibTransactionVersion=1.6.0-20230524-123200-367c766
-stdlibWebsocketVersion=2.8.0-20230524-082900-ee0eb00
-stdlibWebsubVersion=2.8.0-20230524-110900-1d5f756
-stdlibWebsubhubVersion=1.8.0-20230524-110800-46d7662
+stdlibGrpcVersion=1.8.0
+stdlibTransactionVersion=1.6.0
+stdlibWebsocketVersion=2.8.0
+stdlibWebsubVersion=2.8.0
+stdlibWebsubhubVersion=1.8.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.8.0-20230524-111800-84b7367
-stdlibSqlVersion=1.9.0-20230524-142200-889b602
+stdlibGraphqlVersion=1.8.0
+stdlibSqlVersion=1.9.0
 
 # Stdlib Level 08
-stdlibPersistVersion=1.0.0-20230529-125900-cf8337e
+stdlibPersistVersion=1.0.0
 
 # Persist Tool
-persistToolVersion=1.0.0-20230529-142100-07201b3
+persistToolVersion=1.0.0
 
 # Dev Tools
 devToolsVersion=1.1.0
@@ -83,7 +83,7 @@ protocToolVersion=0.1.1
 openapiVersion=1.6.0
 
 # AsyncAPI Module
-asyncapiVersion=0.6.0-20230529-102700-4aaeb08
+asyncapiVersion=0.6.0
 
 c2cVersion=2.7.0
 
