Update OpenAPI version and tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ slf4jVersion=1.7.30
 balstdlibBranch=2201.5.x
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.1.0
-stdlibIoVersion=1.4.0
+stdlibConstraintVersion=1.2.0
+stdlibIoVersion=1.4.1
 stdlibJavaArraysVersion=1.2.3
 stdlibRegexVersion=1.4.0
 stdlibTimeVersion=2.2.4
@@ -24,33 +24,33 @@ observeVersion=1.0.7
 stdlibMathVectorVersion=1.0.1-20230529-131300-5c49593
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.3.0
-stdlibLogVersion=2.7.0
+stdlibCryptoVersion=2.3.1
+stdlibLogVersion=2.7.1
 stdlibOsVersion=1.6.0
 stdlibProtobufVersion=1.3.2
 stdlibRandomVersion=1.3.1
 stdlibSerdesVersion=0.2.0
-stdlibTaskVersion=2.3.1
+stdlibTaskVersion=2.3.2
 stdlibXsltVersion=2.4.0
 observeInternalVersion=1.0.6
 
 # Stdlib Level 03
-stdlibCacheVersion=3.4.0
-stdlibFileVersion=1.7.0
+stdlibCacheVersion=3.5.0
+stdlibFileVersion=1.7.1
 stdlibFtpVersion=2.7.0
-stdlibMimeVersion=2.7.0
+stdlibMimeVersion=2.7.1
 stdlibTcpVersion=1.7.0
 stdlibUdpVersion=1.7.0
 stdlibUuidVersion=1.5.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.7.0
+stdlibAuthVersion=2.8.0
 stdlibEmailVersion=2.7.0
-stdlibJwtVersion=2.7.0
-stdlibOAuth2Version=2.7.0
+stdlibJwtVersion=2.8.0
+stdlibOAuth2Version=2.8.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.7.0
+stdlibHttpVersion=2.8.0
 
 # Stdlib Level 06
 
@@ -84,7 +84,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.0
+openapiVersion=1.5.1-20230605-145100-5ec6855
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
