Change branch to access extensions.json

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2022R4
 slf4jVersion=1.7.30
-balstdlibBranch=master
+balstdlibBranch=2201.6.x
 
 # Stdlib Level 01
 stdlibConstraintVersion=1.2.0
