--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
 version=2201.7.0-SNAPSHOT
 codeName=swan-lake
-ballerinaLangVersion=2201.6.0-20230607-001800-84ad8280
+ballerinaLangVersion=2201.6.0-20230608-114700-76bc9bc7<
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 specVersion=2022R4
