--- a/gradle.properties
+++ b/gradle.properties
@@ -84,7 +84,7 @@ graphqlVersion=0.5.1
 protocToolVersion=0.1.0
 
 # OpenAPI Module
-openapiVersion=1.5.0
+openapiVersion=1.5.1-20230613-092400-18954d3
 
 # AsyncAPI Module
 asyncapiVersion=0.5.0
