Update yaml and toml timestamp versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,8 +46,8 @@ stdlibAuthVersion=2.8.0
 stdlibEmailVersion=2.7.1
 stdlibJwtVersion=2.8.0
 stdlibOAuth2Version=2.8.0
-stdlibYamlVersion=0.3.0
-stdlibTomlVersion=0.3.0
+stdlibYamlVersion=0.3.1-20230612-141800-3f686c6
+stdlibTomlVersion=0.3.1-20230609-180200-0462a55
 stdlibEdiVersion=1.0.1
 
 # Stdlib Level 05
