--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.5.1-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.5.0
+ballerinaLangVersion=2201.5.1-20230616-211200-8f5066c0
 ballerinaJreVersion=1.1.0
 dependencyJREVersion=jdk-11.0.18+10-jre
 
