--- a/gradle.properties
+++ b/gradle.properties
@@ -71,7 +71,7 @@ stdlibPersistVersion=1.0.0
 persistToolVersion=1.0.0
 
 # Dev Tools
-devToolsVersion=1.1.0
+devToolsVersion=1.2.0-20230619-195300-7772d8e
 ballerinaCommandVersion=1.3.15
 
 # GraphQL Tool
