Update gradle.properties with the stdlib versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,61 +11,61 @@ slf4jVersion=1.7.30
 balstdlibBranch=master
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.2.0
-stdlibIoVersion=1.4.1
-stdlibJavaArraysVersion=1.2.3
+stdlibIoVersion=1.5.0-20230614-150600-6387868
+stdlibJavaArraysVersion=1.3.0-20230614-151100-2b41a73
 stdlibRegexVersion=1.4.3
-stdlibTimeVersion=2.2.4
-stdlibUrlVersion=2.2.3
-stdlibXmldataVersion=2.5.0
-observeVersion=1.0.7
+stdlibTimeVersion=2.3.0-20230614-151000-47027a9
+stdlibUrlVersion=2.3.0-20230614-141500-7a93dbb
+stdlibXmldataVersion=2.6.0-20230614-145300-76bacd2
+observeVersion=1.1.0-20230614-170700-802c054
 stdlibMathVectorVersion=1.0.1
 
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.3.1
-stdlibLogVersion=2.7.1
-stdlibOsVersion=1.6.0
-stdlibProtobufVersion=1.4.0
-stdlibRandomVersion=1.3.1
-stdlibTaskVersion=2.3.2
-stdlibXsltVersion=2.4.0
-observeInternalVersion=1.0.6
+stdlibConstraintVersion=1.3.0-20230614-161700-f1a0fb3
+stdlibCryptoVersion=2.4.0-20230614-154200-1745f32
+stdlibLogVersion=2.8.0-20230614-193000-9f7edcd
+stdlibOsVersion=1.7.0-20230614-193300-1fcd23f
+stdlibProtobufVersion=1.5.0-20230614-193400-81c4241
+stdlibRandomVersion=1.4.0-20230614-193600-5cfcecf
+stdlibTaskVersion=2.4.0-20230614-193200-996af8b
+stdlibXsltVersion=2.5.0-20230614-210200-081213e
+observeInternalVersion=1.1.0-20230614-173400-75b87c5
 
 # Stdlib Level 03
-stdlibCacheVersion=3.5.0
-stdlibFileVersion=1.7.1
-stdlibFtpVersion=2.7.1
-stdlibMimeVersion=2.7.1
-stdlibTcpVersion=1.7.1
-stdlibUdpVersion=1.7.1
-stdlibUuidVersion=1.5.1
+stdlibCacheVersion=3.6.0-20230615-100200-8b6d451
+stdlibFileVersion=1.8.0-20230615-104200-e8d70cb
+stdlibFtpVersion=2.8.0-20230615-100100-39f6a7e
+stdlibMimeVersion=2.8.0-20230614-201600-ffa7634
+stdlibTcpVersion=1.8.0-20230615-103200-a4ed66d
+stdlibUdpVersion=1.8.0-20230615-102900-89bbb22
+stdlibUuidVersion=1.6.0-20230615-104100-07dba2e
 
 # Stdlib Level 04
-stdlibAuthVersion=2.8.0
-stdlibEmailVersion=2.7.1
-stdlibJwtVersion=2.8.0
-stdlibOAuth2Version=2.8.0
-stdlibYamlVersion=0.3.1-20230612-141800-3f686c6
-stdlibTomlVersion=0.3.1-20230609-180200-0462a55
+stdlibAuthVersion=2.9.0-20230615-113100-5d474fe
+stdlibEmailVersion=2.8.0-20230615-112800-32b4daa
+stdlibJwtVersion=2.9.0-20230615-112200-5ee0b41
+stdlibOAuth2Version=2.9.0-20230615-113100-5eaea6c
+stdlibYamlVersion=0.4.0-20230615-112800-1952bc4
+stdlibTomlVersion=0.4.0-20230615-115600-d211d21
 stdlibEdiVersion=1.0.1
 
 # Stdlib Level 05
-stdlibHttpVersion=2.8.0
+stdlibHttpVersion=2.9.0-20230615-133700-5613017
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.8.0
-stdlibTransactionVersion=1.6.0
-stdlibWebsocketVersion=2.8.0
-stdlibWebsubVersion=2.8.0
-stdlibWebsubhubVersion=1.8.0
+stdlibGrpcVersion=1.9.0-20230615-222600-05b8b22
+stdlibTransactionVersion=1.7.0-20230615-165500-bcec15b
+stdlibWebsocketVersion=2.9.0-20230615-161200-30fe1a8
+stdlibWebsubVersion=2.9.0-20230616-121600-330319b
+stdlibWebsubhubVersion=1.9.0-20230615-215500-15282e6
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.8.0
-stdlibSqlVersion=1.9.0
+stdlibGraphqlVersion=1.9.0-20230615-213300-510f6ad
+stdlibSqlVersion=1.10.0-20230615-195700-94a9c75
 
 # Stdlib Level 08
-stdlibPersistVersion=1.0.0
+stdlibPersistVersion=1.1.0-20230616-165300-fd7e5fc
 
 # Persist Tool
 persistToolVersion=1.0.0
